# ghosttrace

./: .ghost.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  verify_pypi.py
ghosttrace/: __init__.py  cli.py  core.py  ghost_writer.py  mock_agent.py  recorder.py  replayer.py  tracking.py
ghosttrace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
