[project]
name = "ghosttrace"
version = "0.1.0"
description = "Record AI agent decisions, including phantom branches."
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ghosttrace = "ghosttrace.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
